# internal/models/coupon_usage.go
@@ -1,0 +1,13 @@
+package models
+
+import "time"
+
+type CouponUsage struct {
+	ID int64
+
+	CouponID int64
+	UserID   int64
+	OrderID  int64
+
+	UsedAt time.Time
+}
